Creation of thumbnails

--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@
   </template>
 
   <script src="js/main.js" type="module"></script>
+  <script src="js/thumbnails.js" type="module"></script>
 
 </body>
 </html>
