Modifying a big--picture tag

--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
 
   <script src="js/main.js" type="module"></script>
   <script src="js/thumbnails.js" type="module"></script>
+  <script src="js/big_picture.js" type="module"></script>
 
 </body>
 </html>
