--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
       <section class="img-upload">
         <div class="img-upload__wrapper">
           <h2 class="img-upload__title  visually-hidden">Загрузка фотографии</h2>
-          <form class="img-upload__form" id="upload-select-image" method="post" enctype="multipart/form-data" autocomplete="off">
+          <form class="img-upload__form" id="upload-select-image" method="post"
+                action="https://26.javascript.pages.academy/kekstagram" enctype="multipart/form-data"
+                autocomplete="off">
 
             <!-- Изначальное состояние поля для загрузки изображения -->
             <fieldset class="img-upload__start">
@@ -46,7 +48,7 @@
                   <!-- Изменение размера изображения -->
                   <fieldset class="img-upload__scale  scale">
                     <button type="button" class="scale__control  scale__control--smaller">Уменьшить</button>
-                    <input type="text" class="scale__control  scale__control--value" value="55%" title="Image Scale" name="scale" readonly>
+                    <input type="text" class="scale__control  scale__control--value" value="55%" title="Image Scale" name="scale">
                     <button type="button" class="scale__control  scale__control--bigger">Увеличить</button>
                   </fieldset>
 
@@ -116,10 +118,14 @@
                 <!-- Добавление хэш-тегов и комментария к изображению -->
                 <fieldset class="img-upload__text text">
                   <div class="img-upload__field-wrapper">
-                    <input class="text__hashtags" name="hashtags" placeholder="#ХэшТег">
+                    <label>
+                      <input type="text" class="text__hashtags" name="hashtags" placeholder="#ХэшТег">
+                    </label>
                   </div>
                   <div class="img-upload__field-wrapper">
-                    <textarea class="text__description" name="description" placeholder="Ваш комментарий..."></textarea>
+                    <label>
+                      <textarea class="text__description" name="description" placeholder="Ваш комментарий..."></textarea>
+                    </label>
                   </div>
                 </fieldset>
 
@@ -232,9 +238,10 @@
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
 
-  <script src="js/main.js" type="module"></script>
+  <script src="pristine/pristine.min.js" type="text/javascript"></script>
+  <script src="js/script.js" type="module"></script>
   <script src="js/thumbnails.js" type="module"></script>
-  <script src="js/big_picture.js" type="module"></script>
+  <script src="js/big-picture.js" type="module"></script>
 
 </body>
 </html>
