big-picture is modified

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           </ul>
 
           <!-- Кнопка для загрузки новой порции комментариев -->
-          <button type="button" class="social__comments-loader  comments-loader">Загрузить еще</button>
+          <button type="button" class="social__comments-loader  comments-loader">Загрузить ещё</button>
 
           <!-- Форма для отправки комментария -->
           <div class="social__footer">
@@ -241,7 +241,6 @@
   <script src="pristine/pristine.min.js" type="text/javascript"></script>
   <script src="js/script.js" type="module"></script>
   <script src="js/thumbnails.js" type="module"></script>
-  <script src="js/big-picture.js" type="module"></script>
 
 </body>
 </html>
