--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="nouislider/nouislider.css">
   <title>Кекстаграм</title>
 </head>
 
@@ -48,7 +49,7 @@
                   <!-- Изменение размера изображения -->
                   <fieldset class="img-upload__scale  scale">
                     <button type="button" class="scale__control  scale__control--smaller">Уменьшить</button>
-                    <input type="text" class="scale__control  scale__control--value" value="55%" title="Image Scale" name="scale">
+                    <input type="text" class="scale__control  scale__control--value" value="100%" title="Image Scale" name="scale">
                     <button type="button" class="scale__control  scale__control--bigger">Увеличить</button>
                   </fieldset>
 
@@ -239,6 +240,7 @@
   </template>
 
   <script src="pristine/pristine.min.js" type="text/javascript"></script>
+  <script src="nouislider/nouislider.js"></script>
   <script src="js/script.js" type="module"></script>
   <script src="js/thumbnails.js" type="module"></script>
 
